[tool.poetry]
name = "04-design-a-rate-limiter"
version = "0.1.0"
description = ""
authors = ["Dowon Oh <dhehdnjs03@gmail.com>"]
readme = "README.md"
packages = [{include = "04_design_a_rate_limiter"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.88.0"}
locust = "^2.13.2"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
